<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:focusableInTouchMode="true"
                tools:context=".MainActivity">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="vertical">

            <TextView
                android:id="@+id/popup_subTitle1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="Request URI"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/popup_getString1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:singleLine="false"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/popup_subTitle2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="Response URI"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/popup_getString2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:singleLine="false"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/popup_subTitle3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="UserName"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/popup_getString3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:singleLine="false"
                android:textSize="18sp" />

            <Button
                android:id="@+id/textView_initialize"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="1sp"
                android:clickable="true"
                android:gravity="center"
                android:onClick="startTest"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:text="@string/initialize"
                android:textSize="18sp" 
                android:visibility="visible"/>
            
            <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:paddingTop="@dimen/activity_vertical_margin"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:id="@+id/textView_getDiscovery"
                    android:textSize="18sp"
                    android:text="@string/get_discovery"
                    android:gravity="center"
                    android:layout_marginBottom="1sp"
                    android:clickable="true"
                    android:onClick="startTest"
                    android:visibility="gone"/>

            <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:paddingTop="@dimen/activity_vertical_margin"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:id="@+id/textView_registration"
                    android:textSize="18sp"
                    android:text="@string/registration"
                    android:gravity="center"
                    android:layout_marginBottom="1sp"
                    android:clickable="true"
                    android:onClick="startTest"
                    android:visibility="gone"/>

            <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:paddingTop="@dimen/activity_vertical_margin"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:id="@+id/textView_authentication"
                    android:textSize="18sp"
                    android:text="@string/authentication"
                    android:gravity="center"
                    android:layout_marginBottom="1sp"
                    android:clickable="true"
                    android:onClick="startTest"
                    android:visibility="gone"/>

            <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:paddingTop="@dimen/activity_vertical_margin"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:id="@+id/textView_transaction"
                    android:textSize="18sp"
                    android:text="@string/transaction"
                    android:gravity="center"
                    android:layout_marginBottom="1sp"
                    android:clickable="true"
                    android:onClick="startTest"
                    android:visibility="gone"/>

            <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:paddingTop="@dimen/activity_vertical_margin"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:id="@+id/textView_deregistration"
                    android:textSize="18sp"
                    android:text="@string/deregistration"
                    android:gravity="center"
                    android:layout_marginBottom="1sp"
                    android:clickable="true"
                    android:onClick="startTest"
                    android:visibility="gone"/>

        </LinearLayout>

        <TextView android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:textSize="16sp"
                  android:id="@+id/textView_result"
                  android:text="@string/output_result"
                  android:visibility="gone"/>

        <ScrollView android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingTop="@dimen/activity_vertical_margin">

            <TextView android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:textSize="16sp"
                      android:id="@+id/textView_output"/>

        </ScrollView>

    </LinearLayout>

</RelativeLayout>
